# calibre-lang

./: .gitignore  Cargo.toml  README.md  cal.toml  calibre.toml
cal/: Cargo.toml
cal/src/: config.rs  lib.rs  main.rs
calibre/: Cargo.toml
calibre/src/: config.rs  lib.rs  main.rs
common/: Cargo.toml
common/src/: errors.rs  lib.rs  utils.rs
common/src/environment/: children.rs  mod.rs  objects.rs  scopes.rs
common/src/native/: mod.rs
cranelift-jit/: Cargo.toml
cranelift-jit/src/: jit.rs  lib.rs  main.rs
cranelift-jit/src/translator/: mod.rs
cranelift-jit/src/values/: cast.rs  mod.rs
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs  testing.rs  utils.rs
crates/comptime/: Cargo.toml
crates/comptime/src/: lib.rs
crates/cranelift/: Cargo.toml
crates/cranelift-jit/: Cargo.toml
crates/cranelift-jit/src/: jit.rs  lib.rs  main.rs
crates/cranelift/src/: lib.rs  main.rs
crates/cranelift/src/translator/: layout.rs  memory.rs  mod.rs
crates/cranelift/src/translator/expressions/: lists.rs  mod.rs  objects.rs
crates/cranelift/src/translator/statements/: loops.rs  mod.rs
crates/cranelift/src/values/: cast.rs  mod.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: lib.rs  testing.rs
crates/lir/: Cargo.toml
crates/lir/src/: lib.rs
crates/middle/: Cargo.toml
crates/middle/src/: ast.rs  environment.rs  lib.rs
crates/mir/: Cargo.toml
crates/mir-ty/: Cargo.toml
crates/mir-ty/src/: hm.rs  identifiers.rs  lib.rs  renaming.rs
crates/mir/src/: ast.rs  environment.rs  errors.rs  identifiers.rs  infer.rs  inline.rs  instructions.rs  lib.rs  typing.rs
crates/parser/: Cargo.toml
crates/parser/src/: identifiers.rs  lexer.rs  lib.rs  native.rs
crates/parser/src/ast/: binary.rs  comparison.rs  formatter.rs  mod.rs
crates/parser/src/parse/: binary.rs  declarations.rs  diagnostics.rs  expressions.rs  functions.rs  matching.rs  mod.rs  setup.rs  statements.rs  type.rs  util.rs
crates/std/: Cargo.toml
crates/std/src/: lib.rs
crates/std/src/global/: main.cal  main.cl
crates/std/src/stdlib/args/: main.cal
crates/std/src/stdlib/async/: main.cal  main.cl
crates/std/src/stdlib/collections/: main.cal
crates/std/src/stdlib/console/: main.cal  main.cl
crates/std/src/stdlib/crypto/: main.cal
crates/std/src/stdlib/env/: main.cal
crates/std/src/stdlib/file/: main.cal  main.cl
crates/std/src/stdlib/fs/: main.cal
crates/std/src/stdlib/generators/: main.cal
crates/std/src/stdlib/json/: lexer.cal  main.cal  parser.cal
crates/std/src/stdlib/list/: main.cal  main.cl
crates/std/src/stdlib/math/: main.cal
crates/std/src/stdlib/net/: main.cal
crates/std/src/stdlib/option/: main.cal
crates/std/src/stdlib/process/: main.cal
crates/std/src/stdlib/random/: main.cal  main.cl
crates/std/src/stdlib/range/: main.cal  main.cl
crates/std/src/stdlib/regex/: main.cal
crates/std/src/stdlib/result/: main.cal
crates/std/src/stdlib/str/: main.cal  main.cl
crates/std/src/stdlib/thread/: main.cal  main.cl
crates/type-checker/: Cargo.toml
crates/type-checker/src/: lib.rs  testing.rs
crates/vm/: Cargo.toml
crates/vm/src/: config.rs  conversion.rs  error.rs  evaluate.rs  lib.rs  scheduler.rs  serde_fxhashmap_rc.rs  variables.rs  vm_lookup.rs
crates/vm/src/conversion/: ir.rs  mod.rs
crates/vm/src/conversion/lowering/: block.rs  function.rs  mod.rs
crates/vm/src/evaluate/: instruction.rs  mod.rs
crates/vm/src/native/: async.rs  global.rs  mod.rs
crates/vm/src/native/stdlib/: args.rs  async.rs  char.rs  collections.rs  console.rs  crypto.rs  env.rs  fs.rs  list.rs  mod.rs  net.rs  process.rs  random.rs  regex.rs  str.rs  thread.rs
crates/vm/src/serialization/: mod.rs  serde_fxhashmap.rs
crates/vm/src/value/: bridge.rs  conversion.rs  display.rs  ffi.rs  mod.rs  operation.rs
examples/: .simple.cl.kate-swp  async.cal  destructure.cal  destructure.cl  dyn.cal  examples.cal  examples.cl  ffi.cl  generators.cal  generic.cal  generic.cl  hashmap.cal  http.cal  iterators.cal  labelled_scopes.cal  overloads.cal  ptr_conversion.cal  ptr_conversion.cl  ref_test.cal  rule110.cal  simple.cl  simple2.cal  simple2.cl  stdlib_showcase.cal  test.cal  test.cl  tictactoe.cal  tictactoe.cl  traits.cal  use_syntax.cal
examples/aoc2025/: day1.cal
examples/aoc2025/day1/: custom_input.txt  main.cal
examples/aoc2025/day2/: custom_input.txt  main.cal  main.py
examples/aoc2025/day3/: custom_input.txt  main.cal
examples/aoc2025/day4/: custom_input.txt  main.cal
examples/bench/allocation/: test.cal  test.py
examples/bench/async/: test.cal  test.py
examples/bench/call_hot/: test.cal  test.py
examples/bench/factorial/: test.cal  test.py
examples/bench/fib/: test.cal  test.cl  test.lua  test.pl  test.py  test.rb  test.rhai
examples/bench/fib_gen/: test.cal  test.js  test.py
examples/bench/index_list/: test.cal  (+1 more)
examples/brainfuck/: interpreter.cal
examples/c/: ffi.cal  ffi_lib.c
examples/json/: parser.cal  test.json
examples/matmul/: test.cl
examples/showcase/: data.cal  data.cl  main.cal  main.cl
examples/zig/: ffi.cal  ffi.zig
fmt/: Cargo.toml
fmt/src/: lib.rs  main.rs
fmt/src/format/: mod.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs
lsp/: Cargo.toml
lsp/src/: main.rs  model.rs
lsp/src/features/: completion.rs  core.rs  diagnostics.rs  formatting.rs  handlers.rs  mod.rs  navigation.rs
parser/: Cargo.toml
parser/src/: lexer.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: lexer.rs  lib.rs  main.rs  test3.cl  test3.py  test4.cl
src/: example.cl  lexer.rs  main.rs  test.cl  test2.cl  utils.rs
src/ast/: binary.rs  bitwise.rs  comparison.rs  mod.rs
src/examples/: data.cl  example.cl  examples.cl  test.cl  test.py  tictactoe.cl
src/native/: mod.rs
src/parser/: mod.rs  parse.rs
src/runtime/: interpreter.rs  mod.rs  scope.rs  values.rs
tree-sitter/: grammar.js
tree-sitter/src/: grammar.json  node-types.json  parser.c
type-checker/: Cargo.toml
type-checker/src/: lib.rs  utils.rs
(+251 files in other folders)
