[package]
name = "calibre-language"
version = "0.1.0"
edition = "2024"
authors = ["Creative Coders <officialccoders@gmail.com>"]
license = "MIT"
repository = "https://github.com/CodersCreative/calibre-lang"
publish = false

[workspace]
members = [
    "cal",
    "lsp",
    "crates/interpreter",
    "crates/parser",
    "crates/cranelift-jit",
    "crates/type-checker",
    "crates/common",
]

[workspace.dependencies]
cal = { path = "./cal", version = "0.1.0" }
cal-lsp = { path = "./lsp", version = "0.1.0" }
calibre-interpreter = { path = "./crates/interpreter", version = "0.1.0" }
calibre-parser = { path = "./crates/parser", version = "0.1.0" }
calibre-cranelift-jit = { path = "./crates/cranelift-jit", version = "0.1.0" }
calibre-type-checker = { path = "./crates/type-checker", version = "0.1.0" }
calibre-common = { path = "./crates/common", version = "0.1.0" }

[features]
cranelift = ["dep:calibre-cranelift-jit", "common"]
lsp = ["dep:cal-lsp", "common", "dep:calibre-interpreter", "dep:async-lsp", "dep:tokio", "dep:tower", "dep:tracing", "dep:tracing-subscriber"]
cal = ["dep:cal", "common", "dep:calibre-interpreter", "dep:rustyline", "dep:clap"]
common = ["dep:calibre-parser", "dep:calibre-common", "dep:calibre-type-checker"]

[dependencies]
# For Cal
clap = { version = "4.5.40", features = ["derive"], optional = true }
rustyline = {version = "16.0.0", optional = true}

# For LSP
async-lsp = { version = "0.2.2", features = ["tokio"], optional = true}
tokio = { version = "1.47.1", features = ["full"], optional = true }
tower = { version = "0.5.2", features = ["full", "tokio"], optional = true}
tracing = {version = "0.1.41", optional = true}
tracing-subscriber = {version = "0.3.20", optional = true}

# Crates
calibre-parser = {workspace = true, optional = true}
calibre-interpreter = {workspace = true, optional = true}
calibre-common = {workspace = true, optional = true}
calibre-type-checker = {workspace = true, optional = true}
calibre-cranelift-jit = {workspace = true, optional = true}
cal-lsp = {workspace = true, optional = true}
cal = {workspace = true, optional = true}

[[bin]]
name = "cal"           # The name of the target.
path = "cal/src/main.rs"    # The source file of the target.
required-features = ["cal"]
doc = true             # Is documented by default.

[[bin]]
name = "cal-lsp"           # The name of the target.
path = "lsp/src/main.rs"    # The source file of the target.
required-features = ["lsp"]
doc = true             # Is documented by default.
