[package]
name = "calibre-language"
version = "0.1.0"
edition = "2024"
authors = ["Creative Coders <officialccoders@gmail.com>"]
license = "MIT"
repository = "https://github.com/CodersCreative/calibre-lang"
publish = false

[workspace]
members = [
    "cal",
    "lsp",
    "crates/interpreter",
    "crates/parser",
    "crates/cranelift-jit",
    "crates/type-checker",
    "crates/common",
    "crates/mir",
]
