[package]
name = "cal"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.1"
rustyline = "16.0.0"
calibre-parser = {path = "../crates/parser"}
# calibre-type-checker = {path = "../crates/type-checker"}
calibre-common = {path = "../crates/common"}
calibre-interpreter = {path = "../crates/interpreter"}
calibre-mir = {path = "../crates/mir"}
miette = { version = "7.6.0", features = ["fancy"] }
