[package]
name = "cal"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rand = "0.9.1"
rustyline = "16.0.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "fs"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.3"
blake3 = "1.6.1"
calibre-parser = {path = "../crates/parser"}
calibre-diagnostics = {path = "../crates/diagnostics"}
calibre-mir = {path = "../crates/mir"}
calibre-lir = {path = "../crates/lir"}
calibre-vm = {path = "../crates/vm"}
calibre-mir-ty = {path = "../crates/mir-ty"}
miette = { version = "7.6.0", features = ["fancy"] }
