[package]
name = "calibre"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
rand = { workspace = true }
rustyline = {workspace = true }
smol = "2.0.2"
serde = { workspace = true }
bincode = "1"
blake3 = "1.6.1"
calibre-parser = {workspace = true}
calibre-diagnostics = {workspace = true}
calibre-mir = { workspace = true }
calibre-lir = { workspace = true }
calibre-vm = { workspace = true }
toml = "1.0.1"
glob = "0.3.1"
