[package]
name = "calibre-fmt"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
calibre-parser = { workspace = true }
calibre-diagnostics = { workspace = true }
