[package]
name = "cal-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
async-lsp = { version = "0.2.2", features = ["tokio"] }
calibre-parser = { workspace = true }
cal-fmt = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }
tower = { version = "0.5.2", features = ["full", "tokio"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
