[package]
name = "calibre-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
async-lsp = { version = "0.2.2", features = ["async-io"] }
calibre-parser = { workspace = true }
calibre-mir = { workspace = true }
smol = "2.0.2"
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
