[package]
name = "calibre-cranelift"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish = false
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
cranelift = "0.123.2"
cranelift-module = "0.123.2"
cranelift-native ="0.123.2"
cranelift-object = "0.123.2"
calibre-parser = { workspace = true }
calibre-mir = { workspace = true }
calibre-lir = { workspace = true }
rand = { workspace = true }
libc = "0.2"
rustc-hash = { workspace = true }
