[package]
name = "calibre-lir"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
calibre-mir = { workspace = true }
calibre-parser = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
