[package]
name = "calibre-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true}
rustc-hash = { workspace = true }
chumsky = "0.9.3"
