[package]
name = "calibre-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
calibre-lir = { workspace = true }
calibre-parser = { workspace = true }
rand = { workspace = true }
rustyline = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
dumpster = "2.0.0"
libloading = "0.9"
libffi = "4"
