[package]
name = "calibre-vm"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
calibre-lir = { workspace = true }
calibre-parser = { workspace = true }
rand = { workspace = true }
rustyline = { workspace = true }
thiserror = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
dumpster = "2.0.0"
libloading = "0.9"
libffi = "4"
regex = "1.10.6"
sha2 = "0.10.8"
blake3 = "1.5.4"
hex = "0.4.3"
ureq = "3"
